--- a/Root/CSS/Base/Header_narrow.css
+++ b/Root/CSS/Base/Header_narrow.css
@@ -4,4 +4,10 @@
 		margin-top: -20px;
 	}
 	
+	#header-logo-image_codes {
+		margin-top: -10px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	
 }
