Contd. Updated footer. app url

--- a/Root/CSS/Base/Footer.css
+++ b/Root/CSS/Base/Footer.css
@@ -2,6 +2,16 @@
 	margin-top: -232px;
 }
 
+#download-bottom-url {
+	display: block;
+	margin-top: 7px;
+	margin-bottom: 3px;
+}
+
+#download-bottom-url > span {
+	color: #bbbbbb!important;
+}
+
 #download_button_bottom path {
 	transition: all ease-out 0.3s;
 }
