Added credits: Material icons, Google maps sample code

--- a/Root/HTML/Component/Credits.html
+++ b/Root/HTML/Component/Credits.html
@@ -8,3 +8,13 @@
 		UMB UMB wrapper : <a class='link' href="https://github.com/ujLion/umb-wrapper">https://github.com/ujLion/umb-wrapper</a>
 	</li>
 </ul>
+<ul>
+	<li>
+		Material Icons : <a class='link' href="https://material.io/resources/icons">https://material.io/resources/icons</a>
+	</li>
+</ul>
+<ul>
+	<li>
+		Google Maps - javascript sample code : <a class='link' href="https://developers.google.com/maps/documentation/javascript/examples">https://developers.google.com/maps/documentation/javascript/examples</a>
+	</li>
+</ul>
